--- a/public/pod.html
+++ b/public/pod.html
@@ -26,6 +26,9 @@
     <label>Time of Delivery</label>
     <input type="time" name="delivered_at_time" required>
 
+    <label>GRV Number (optional)</label>
+    <input type="text" name="grv_number" placeholder="e.g. GRV12345">
+
     <label>POD Image (photo)</label>
     <input type="file" name="image" accept="image/*" required>
 
