mde-upload.html

--- a/public/mde-upload.html
+++ b/public/mde-upload.html
@@ -1,24 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>MDE Upload | MM Courier</title>
+  <meta charset="UTF-8" />
+  <title>Upload MDE File | MM Courier</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 30px; }
-    form { max-width: 400px; margin: auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px #ccc; }
-    label, input, button { display: block; width: 100%; margin-top: 10px; }
-    #result { margin-top: 20px; text-align: center; font-weight: bold; }
+    body {
+      font-family: Arial;
+      padding: 40px;
+      background: #f9f9f9;
+    }
+    h1 {
+      text-align: center;
+      color: #0a2b52;
+    }
+    form {
+      max-width: 500px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #ccc;
+    }
+    label {
+      display: block;
+      margin-bottom: 10px;
+    }
+    input[type="file"],
+    button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+    }
+    #result {
+      margin-top: 20px;
+      font-weight: bold;
+      text-align: center;
+    }
+    .success {
+      color: green;
+    }
+    .error {
+      color: red;
+    }
   </style>
 </head>
 <body>
-  <h2 style="text-align:center;">📄 Upload MDE File</h2>
-  <form id="mdeForm" enctype="multipart/form-data">
-    <label>Select FedEx MDE .txt File</label>
-    <input type="file" name="mdeFile" accept=".txt,.text" required>
-    <button type="submit">Upload</button>
+  <h1>📄 Upload MDE File</h1>
+  <form id="mdeForm">
+    <label>Select MDE File (text or .mde):</label>
+    <input type="file" name="mdefile" accept=".txt,.mde" required />
+    <button type="submit">Upload & Process</button>
+    <div id="result"></div>
   </form>
-
-  <div id="result"></div>
 
   <script>
     const form = document.getElementById('mdeForm');
@@ -28,13 +61,25 @@
       e.preventDefault();
       const formData = new FormData(form);
 
-      const res = await fetch('/api/to/mde-upload', {
-        method: 'POST',
-        body: formData
-      });
+      try {
+        const res = await fetch('/api/to/upload', {
+          method: 'POST',
+          body: formData
+        });
 
-      const data = await res.json();
-      result.textContent = data.message || 'Upload complete';
+        const data = await res.json();
+
+        if (data.success) {
+          result.className = 'success';
+          result.textContent = `✅ Uploaded! ${data.recordsProcessed || 0} records added.`;
+        } else {
+          result.className = 'error';
+          result.textContent = `❌ Failed: ${data.message || 'Unknown error'}`;
+        }
+      } catch (err) {
+        result.className = 'error';
+        result.textContent = '❌ Upload error: ' + err.message;
+      }
     });
   </script>
 </body>
